# yarge

./: Cargo.toml  README.md  build.rs
assets/shaders/: basic-light.fragment  basic-light.vertex  batch.fragment  batch.vertex  image.fragment  image.vertex  rectangle.fragment  rectangle.vertex  triangle.vertex
assets/tilemaps/: tilemap_test.json
examples/animation/: main.rs
examples/assets/animations/: multi.json  single.json
examples/assets/meshes/colored_cube/: colored_cube.mtl
examples/assets/meshes/katana/: my_first_katana_toon.mtl
examples/assets/meshes/katana_no_planes/: katana.mtl
examples/basic-ui/: main.rs
examples/declare-ui/: main.rs
examples/kitchen-sink/: main.rs
examples/load-obj/: main.rs
examples/text/: main.rs
examples/three-dee/: main.rs
gl_vertex_derive/: Cargo.toml
gl_vertex_derive/src/: lib.rs
lib/gl/: Cargo.toml  build.rs
lib/gl/src/: lib.rs
src/: camera.rs  image.rs  lib.rs  main.rs  rectangle.rs  texture.rs  triangle.fragment  triangle.rs  triangle.vertex
src/camera/: camera.rs  camera_3d.rs  mod.rs
src/debug/: mod.rs
src/font/: font_shaders.rs  font_texture.rs  layout.rs  mod.rs  text.rs
src/helpers/: buffer.rs  color_buffer.rs  data.rs  mesh.rs  mod.rs  shader.rs  system.rs  timer.rs  viewport.rs
src/image/: image_shaders.rs  mod.rs
src/layers/: mod.rs
src/rectangle/: mod.rs  rect_shaders.rs
src/renderer/: batch_shaders.rs  layers.rs  mod.rs  render_target.rs  renderable.rs  renderer_2d.rs  renderer_3d.rs
src/resources/: mod.rs
src/sprite/: animation.rs  mod.rs
src/texture/: mod.rs  transform.rs
src/textures/: manager.rs  mod.rs  snapshot.rs  texture.rs  texture_settings.rs  transform.rs
src/tilemaps/: mod.rs
src/triangle/: mod.rs  triangle_shaders.rs
src/ui/: component.rs  mod.rs  primitives.rs
