[package]
name = "yarge"
version = "0.3.1"
authors = ["Eric Andre <ericandre615@gmail.com>"]
edition = "2018"

[dependencies]
gl_vertex_derive = { path = "gl_vertex_derive" }
#sdl2 = { version = "0.32.2", features = ["bundled", "static-link"] }
sdl2 = "0.32.2"
gl = "0.14.0"
nalgebra-glm = "0.3"
vec-2-10-10-10 = "0.1.2"
image = "0.22"
failure = "0.1"
nanoid = "0.3.0"
serde = { version = "~1.0.104", features = ["derive"] }
serde_json = "~1.0.48"
rusttype = { version = "0.8.2", features = ["gpu_cache"] }
unicode-normalization = "0.1.8"
wavefront_obj = "8.0.0"

[build-dependencies]
walkdir = "2.1"
